LASB-2827 Address review feedback